# GScript.TerrainGen

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
docs/: terrain-generation.md
include/: terrain_format.h  terrain_generator.h  terrain_model.h  terrain_preview.h
rsc/: terrain_generator.rc
src/: terrain_editor.cpp  terrain_editor_ui.cpp  terrain_format.cpp  terrain_generator.cpp  terrain_model.cpp  terrain_preview.cpp
tests/: terrain_model_tests.cpp
