cmake_minimum_required(VERSION 3.20)
project(TerrainGenerator LANGUAGES C CXX)
include(FetchContent)
FetchContent_Declare(raylib URL https://github.com/raysan5/raylib/archive/refs/tags/5.5.tar.gz)
set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(raylib)
FetchContent_Declare(tinyfiledialogs GIT_REPOSITORY https://github.com/thechampagne/tinyfiledialogs.git GIT_TAG main)
FetchContent_GetProperties(tinyfiledialogs)
if(NOT tinyfiledialogs_POPULATED)
  FetchContent_Populate(tinyfiledialogs)
  add_library(tinyfiledialogs STATIC "${tinyfiledialogs_SOURCE_DIR}/tinyfiledialogs.c")
  target_include_directories(tinyfiledialogs PUBLIC "${tinyfiledialogs_SOURCE_DIR}")
  set_target_properties(tinyfiledialogs PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib" PDB_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/symbols")
  foreach(configuration DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
    set_target_properties(tinyfiledialogs PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_${configuration} "${CMAKE_BINARY_DIR}/lib" PDB_OUTPUT_DIRECTORY_${configuration} "${CMAKE_BINARY_DIR}/symbols")
  endforeach()
  if(WIN32)
    target_link_libraries(tinyfiledialogs PUBLIC comdlg32 ole32)
  endif()
endif()
add_library(terrain_model src/terrain_model.cpp src/terrain_generator.cpp src/terrain_format.cpp src/terrain_preview.cpp)
target_include_directories(terrain_model PUBLIC include)
target_compile_features(terrain_model PUBLIC cxx_std_20)
set_target_properties(terrain_model PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib" PDB_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/symbols")
foreach(configuration DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
  set_target_properties(terrain_model PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_${configuration} "${CMAKE_BINARY_DIR}/lib" PDB_OUTPUT_DIRECTORY_${configuration} "${CMAKE_BINARY_DIR}/symbols")
endforeach()
add_executable(TerrainGenerator src/terrain_editor.cpp src/terrain_editor_ui.cpp tests/terrain_model_tests.cpp)
target_link_libraries(TerrainGenerator PRIVATE terrain_model raylib tinyfiledialogs)
target_compile_definitions(TerrainGenerator PRIVATE TERRAIN_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
set_target_properties(TerrainGenerator PROPERTIES OUTPUT_NAME TerrainGenerator RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin" PDB_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/symbols")
foreach(configuration DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
  set_target_properties(TerrainGenerator PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${configuration} "${CMAKE_CURRENT_SOURCE_DIR}/bin" PDB_OUTPUT_DIRECTORY_${configuration} "${CMAKE_BINARY_DIR}/symbols")
endforeach()
if(WIN32)
  set_target_properties(TerrainGenerator PROPERTIES WIN32_EXECUTABLE TRUE)
  target_link_options(TerrainGenerator PRIVATE /ENTRY:mainCRTStartup)
  target_sources(TerrainGenerator PRIVATE rsc/terrain_generator.rc)
endif()
enable_testing()
add_test(NAME terrain_model_tests COMMAND TerrainGenerator --self-test)
